avoiding zoom in fields on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -79,8 +79,8 @@ MODAL
 	transform: translate(-50%, -50%);
 	text-align: center;
 	position: fixed;
-	width: 50%;
-	height: 20%;
+	width: 80%;
+	height: 22%;
 	z-index: 200;
 	border: 1px hsla(227, 100%, 30%, 1) solid;
 	padding: 1px;
